--- a/WHMIS.Android/Properties/AndroidManifest.xml
+++ b/WHMIS.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yowcanada" android:installLocation="auto" android:versionCode="40" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yowcanada" android:installLocation="auto" android:versionCode="44" android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="com.android.vending.BILLING" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:largeHeap="true" android:label="YOW Pocket Guide" android:icon="@mipmap/icon"></application>
+	<application android:largeHeap="true" android:label="WHMIS Health and Safety Pocket Guide" android:icon="@mipmap/icon"></application>
 </manifest>
